github(chore): add an endpoint to receive github action CICD result
