# internal/providers/github/openapi.gen.go
@@ -358,6 +358,9 @@ type ClientInterface interface {
 
 	GithubArtifactReady(ctx context.Context, body GithubArtifactReadyJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error)
 
+	// GithubActionResult request
+	GithubActionResult(ctx context.Context, reqEditors ...RequestEditorFn) (*http.Response, error)
+
 	// GithubCompleteInstallationWithBody request with any body
 	GithubCompleteInstallationWithBody(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error)
 
@@ -387,6 +390,18 @@ func (c *Client) GithubArtifactReadyWithBody(ctx context.Context, contentType st
 
 func (c *Client) GithubArtifactReady(ctx context.Context, body GithubArtifactReadyJSONRequestBody, reqEditors ...RequestEditorFn) (*http.Response, error) {
 	req, err := NewGithubArtifactReadyRequest(c.Server, body)
+	if err != nil {
+		return nil, err
+	}
+	req = req.WithContext(ctx)
+	if err := c.applyEditors(ctx, req, reqEditors); err != nil {
+		return nil, err
+	}
+	return c.Client.Do(req)
+}
+
+func (c *Client) GithubActionResult(ctx context.Context, reqEditors ...RequestEditorFn) (*http.Response, error) {
+	req, err := NewGithubActionResultRequest(c.Server)
 	if err != nil {
 		return nil, err
 	}
@@ -493,6 +508,33 @@ func NewGithubArtifactReadyRequestWithBody(server string, contentType string, bo
 	}
 
 	req.Header.Add("Content-Type", contentType)
+
+	return req, nil
+}
+
+// NewGithubActionResultRequest generates requests for GithubActionResult
+func NewGithubActionResultRequest(server string) (*http.Request, error) {
+	var err error
+
+	serverURL, err := url.Parse(server)
+	if err != nil {
+		return nil, err
+	}
+
+	operationPath := fmt.Sprintf("/providers/github/cicd-result")
+	if operationPath[0] == '/' {
+		operationPath = "." + operationPath
+	}
+
+	queryURL, err := serverURL.Parse(operationPath)
+	if err != nil {
+		return nil, err
+	}
+
+	req, err := http.NewRequest("POST", queryURL.String(), nil)
+	if err != nil {
+		return nil, err
+	}
 
 	return req, nil
 }
@@ -666,6 +708,9 @@ type ClientWithResponsesInterface interface {
 
 	GithubArtifactReadyWithResponse(ctx context.Context, body GithubArtifactReadyJSONRequestBody, reqEditors ...RequestEditorFn) (*GithubArtifactReadyResponse, error)
 
+	// GithubActionResultWithResponse request
+	GithubActionResultWithResponse(ctx context.Context, reqEditors ...RequestEditorFn) (*GithubActionResultResponse, error)
+
 	// GithubCompleteInstallationWithBodyWithResponse request with any body
 	GithubCompleteInstallationWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*GithubCompleteInstallationResponse, error)
 
@@ -700,6 +745,28 @@ func (r GithubArtifactReadyResponse) Status() string {
 
 // StatusCode returns HTTPResponse.StatusCode
 func (r GithubArtifactReadyResponse) StatusCode() int {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.StatusCode
+	}
+	return 0
+}
+
+type GithubActionResultResponse struct {
+	Body         []byte
+	HTTPResponse *http.Response
+	JSON500      *externalRef0.InternalServerError
+}
+
+// Status returns HTTPResponse.Status
+func (r GithubActionResultResponse) Status() string {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.Status
+	}
+	return http.StatusText(0)
+}
+
+// StatusCode returns HTTPResponse.StatusCode
+func (r GithubActionResultResponse) StatusCode() int {
 	if r.HTTPResponse != nil {
 		return r.HTTPResponse.StatusCode
 	}
@@ -825,6 +892,15 @@ func (c *ClientWithResponses) GithubArtifactReadyWithResponse(ctx context.Contex
 	return ParseGithubArtifactReadyResponse(rsp)
 }
 
+// GithubActionResultWithResponse request returning *GithubActionResultResponse
+func (c *ClientWithResponses) GithubActionResultWithResponse(ctx context.Context, reqEditors ...RequestEditorFn) (*GithubActionResultResponse, error) {
+	rsp, err := c.GithubActionResult(ctx, reqEditors...)
+	if err != nil {
+		return nil, err
+	}
+	return ParseGithubActionResultResponse(rsp)
+}
+
 // GithubCompleteInstallationWithBodyWithResponse request with arbitrary body returning *GithubCompleteInstallationResponse
 func (c *ClientWithResponses) GithubCompleteInstallationWithBodyWithResponse(ctx context.Context, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*GithubCompleteInstallationResponse, error) {
 	rsp, err := c.GithubCompleteInstallationWithBody(ctx, contentType, body, reqEditors...)
@@ -904,6 +980,32 @@ func ParseGithubArtifactReadyResponse(rsp *http.Response) (*GithubArtifactReadyR
 		}
 		response.JSON401 = &dest
 
+	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 500:
+		var dest externalRef0.InternalServerError
+		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
+			return nil, err
+		}
+		response.JSON500 = &dest
+
+	}
+
+	return response, nil
+}
+
+// ParseGithubActionResultResponse parses an HTTP response from a GithubActionResultWithResponse call
+func ParseGithubActionResultResponse(rsp *http.Response) (*GithubActionResultResponse, error) {
+	bodyBytes, err := io.ReadAll(rsp.Body)
+	defer func() { _ = rsp.Body.Close() }()
+	if err != nil {
+		return nil, err
+	}
+
+	response := &GithubActionResultResponse{
+		Body:         bodyBytes,
+		HTTPResponse: rsp,
+	}
+
+	switch {
 	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 500:
 		var dest externalRef0.InternalServerError
 		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
@@ -1124,6 +1226,10 @@ type ServerInterface interface {
 	// (POST /providers/github/artifact-ready)
 	GithubArtifactReady(ctx echo.Context) error
 
+	// Receive result from github action CICD
+	// (POST /providers/github/cicd-result)
+	GithubActionResult(ctx echo.Context) error
+
 	// Complete GitHub App installation
 	// (POST /providers/github/complete-installation)
 	GithubCompleteInstallation(ctx echo.Context) error
@@ -1160,6 +1266,18 @@ func (w *ServerInterfaceWrapper) GithubArtifactReady(ctx echo.Context) error {
 	handler := w.Handler.GithubArtifactReady
 	secure := w.Handler.SecureHandler
 	err = secure(handler, ctx)
+
+	return err
+}
+
+// GithubActionResult converts echo context to params.
+
+func (w *ServerInterfaceWrapper) GithubActionResult(ctx echo.Context) error {
+	var err error
+
+	// Get the handler, get the secure handler if needed and then invoke with unmarshalled params.
+	handler := w.Handler.GithubActionResult
+	err = handler(ctx)
 
 	return err
 }
@@ -1255,6 +1373,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	}
 
 	router.POST(baseURL+"/providers/github/artifact-ready", wrapper.GithubArtifactReady)
+	router.POST(baseURL+"/providers/github/cicd-result", wrapper.GithubActionResult)
 	router.POST(baseURL+"/providers/github/complete-installation", wrapper.GithubCompleteInstallation)
 	router.GET(baseURL+"/providers/github/installations", wrapper.GithubGetInstallations)
 	router.GET(baseURL+"/providers/github/repos", wrapper.GithubGetRepos)
